edit: humburger planimetry

--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
     <!-- Progetto 1 -->
     <div class="project-slide" >
       <div class="description">
-        <h3>🕜 ChronoApp</h3>
-        <p>Sito per collezionare orologi, scegliere il “DayWatch” o l’orologio in base all’outfit tramite riconoscimento immagine.</p>
-        <p>Sito web dedicato alla mia passione verso la collezione di orologi di diverso tipo. Questo sito permette di registrarsi e creare una collezzione di orologi con immagine e descrizione.</p>
-        <a href="https://chrono-app.vercel.app/" target="_blank">Visita ChronoApp</a>
+        <h3>🏫 Scuola Primaria Cromatica</h3>
+        <p>Progetto architettonico di una scuola elementare dove <strong>il colore diventa linguaggio educativo: ogni aula è identificata da una porta di colore diverso, rendendo l’orientamento più intuitivo e stimolante per i bambini.</strong></p> <p>La struttura include una <strong>palestra interna con grandi arcate a vista, che fondono funzionalità sportiva e qualità estetica, creando un ambiente aperto e luminoso. Nell’aula di arte, ogni sedia ha un colore diverso, incoraggiando l’espressione individuale e la creatività fin dal primo sguardo.</strong></p> <p>Un progetto pensato per crescere con chi lo abita: inclusivo, accogliente e a misura di bambino.</p>
       </div>
 
         <div class="plant-wrapper">
@@ -124,7 +122,7 @@ gsap.utils.toArray(".about").forEach((slide) => {
       {
         opacity: 1,
         y: 0,
-        duration: 1.5,
+        duration: 0.3,
         ease: "power3.out",
         scrollTrigger: {
           trigger: slide,
