--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h2>Project</h2>
   <p>Scorri per scoprire i miei progetti.</p>
 
-  <div class="projects-wrapper" style="height: 800px;">
+  <div class="projects-wrapper" style="height: 80vh;">
     <!-- Progetto 1 -->
     <div class="project-slide" >
       <div class="description">
