--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ gsap.utils.toArray(".about").forEach((slide) => {
       <p>✉️ giada.249g@gmail.com</p>
     </div>
     <div class="contact-info">
-      <p>✉️ francesco.fiaschi2002@email.com</p>
+      <p>✉️ francesco.fiaschi2002@gmail.com</p>
       <p>🔗 
         <a href="https://github.com/effe1209" target="_blank">GitHub</a> | 
         <a href="https://linkedin.com/in/francesco-fiaschi-537b32295" target="_blank">LinkedIn</a>
