dit preload page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 </head>
 <body>
 
+  <div id="preloader">
+    <div id="circle" class="rotating-circle"></div>
+    <div class="diagonal-line"></div>
+    <div class="container" id="image-container">
+      <div class="half left bouncing"></div>
+      <div class="half right bouncing"></div>
+    </div>
+  </div>
+
   <section class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
